# house-prices-kaggle

./: .gitignore  EDA.ipynb  LGBM_submission.csv  README.md  RF_submission.csv  main.py  model.py  preprocessing.py  pyproject.toml  submission_lgbm.csv  train_LGBM.py  train_RF.py
